--- a/pages/about.html
+++ b/pages/about.html
@@ -128,10 +128,10 @@
          <p class="contact-item">+63982828192</p>
        </div>
        <div class="footer-nav">
-        <a href="/index.html">Home</a>
+     <a href="/index.html">Home</a>
         <a href="/pages/about.html">About</a>
         <a href="/pages/about.html#team">Our Team</a>
-        <a href="#">Chapters</a>
+        <a href="/pages/chapters.html">Chapters</a>
       </div>
      </div>
      <hr class="hr-footer">
