--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <div class="start-now-container">
       <div class="start-now-text">
-        <p class="quote">Panget si Kenneth</p>
+        <p class="quote">Panget si katrina</p>
         <p class="description">Master the fundamental concepts of mathematics, Arithmo provides engaging lessons and practice exercises to build your foundation in Mathematics.</p>
         <a href="/pages/chapters.html"><button id="learn-now">Learn Now</button></a>
       </div>
