--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           </div>
           <div class="offers-child">
             <i class="fa-solid fa-bell offers-icon"></i>
-            <p class="title">Interactive</p>
-            <p class="description">Explore our Interactive And fun Lessons. learn Mathematics With Fun </p>
+            <p class="title">Examples</p>
+            <p class="description">Test your math skills. Track progress. Identify areas for improvement.</p>
           </div>
         </div>
      </div>
