--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
           <div class="offers-child">
             <i class="fa-solid fa-signal offers-icon"></i>
             <p class="title">Online Course</p>
-            <p class="description">Comprehensive math courses. Learn at your own pace.  Explore free math lessons.</p>
+            <p class="description">Learn math through structured courses at your own pace with interactive lessons.</p>
           </div>
           <div class="offers-child">
             <i class="fa-solid fa-book offers-icon"></i>
             <p class="title">Lessons</p>
-            <p class="description">Explore free math lessons. Perfect for Brushing up or learning new topics.</p>
+            <p class="description">Access free math lessons to review concepts, practice problems, and improve skills.</p>
           </div>
           <div class="offers-child">
             <i class="fa-solid fa-bell offers-icon"></i>
             <p class="title">Examples</p>
-            <p class="description">Test your math skills. Track progress. Identify areas for improvement.</p>
+            <p class="description">Test your math knowledge with examples, track progress, and identify weak areas.</p>
           </div>
         </div>
      </div>
