--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
           <div class="offers-child">
             <i class="fa-solid fa-signal offers-icon"></i>
             <p class="title">Online Course</p>
-            <p class="description">Learn math through structured courses at your own pace with interactive lessons.</p>
+            <p class="description">Learn Learn math through structured courses at your own pace with interactive lessons.</p>
           </div>
           <div class="offers-child">
             <i class="fa-solid fa-book offers-icon"></i>
             <p class="title">Lessons</p>
-            <p class="description">Access free math lessons to review concepts, practice problems, and improve skills.</p>
+            <p class="description">Access free math lessons to review concepts, practice problems, and improve</p>
           </div>
           <div class="offers-child">
             <i class="fa-solid fa-bell offers-icon"></i>
