--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="offers-child">
             <i class="fa-solid fa-book offers-icon"></i>
             <p class="title">Lessons</p>
-            <p class="description">Access free math lessons to review concepts, practice problems, and improve skills</p>
+            <p class="description">Access free math lessons to review concepts and practice problems effectively.</p>
           </div>
           <div class="offers-child">
             <i class="fa-solid fa-bell offers-icon"></i>
