--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
           <div class="offers-child">
             <i class="fa-solid fa-signal offers-icon"></i>
             <p class="title">Online Course</p>
-            <p class="description">Learn Learn math through structured courses at your own pace with interactive lessons.</p>
+            <p class="description">Learn math through structured courses at your own pace with fun, interactive lessons.</p>
           </div>
           <div class="offers-child">
             <i class="fa-solid fa-book offers-icon"></i>
             <p class="title">Lessons</p>
-            <p class="description">Access free math lessons to review concepts and practice problems effectively.</p>
+            <p class="description">Access free lessons to review key math concepts, solve problems, and enhance your skills.</p>
           </div>
           <div class="offers-child">
             <i class="fa-solid fa-bell offers-icon"></i>
             <p class="title">Examples</p>
-            <p class="description">Test your math knowledge with examples, track progress, and identify weak areas.</p>
+            <p class="description">Test your math knowledge with helpful examples, track progress, and improve weak areas.</p>
           </div>
         </div>
      </div>
